<resources>
    <string name="app_name">NavigationApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_1">Display Image 1</string>
    <string name="image_2">Display Image 2</string>
    <string name="image_3">Display Image 3</string>
    <string name="image_3_desc">Image 3</string>
    <string name="image_2_desc">Image 2</string>
    <string name="image_1_desc">Image 1</string>
    <string name="placeholder">Image</string>
</resources>